[package]
name = "globject-rs"
version = "0.0.2"
edition = "2024"

[dependencies]
bincode = "2.0.1"
bitvec = "1.0.1"
glcore-rs = "0.1.5"
half = "2.6.0"
image = "0.25.6"
nalgebra-glm = "0.19.0"
struct_iterable = "0.1.1"
turbojpeg = { version = "1.3.3", features = ["image"] }

[dev-dependencies]
glfw = "0.59.0"
