[package]
name = "globject-rs"
version = "0.1.1"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
repository = "https://github.com/0xAA55/globject-rs"
readme = "Readme.md"
license-file = "LICENSE"
description = "OpenGL Object Wrapper for Rust"
keywords = ["OpenGL", "GPU"]

[dependencies]
bincode = "2.0.1"
bitvec = "1.0.1"
glcore-rs = "0.1.5"
half = "2.6.0"
image = "0.25.6"
nalgebra-glm = "0.19.0"
struct_iterable = "0.1.1"
turbojpeg = { version = "1.3.3", features = ["image"] }

[dev-dependencies]
glfw = { version = "0.60.0", features = ["static-link"] }
